--- a/test/css/desktop.css
+++ b/test/css/desktop.css
@@ -63,16 +63,35 @@ body {
     transform: scale(1);
 }
 .popup-window {
-    width: 25rem;
-    height: 10rem;
+    width: 20rem;
+    height: 15rem;
     backdrop-filter: unset;
+    transform: scale(1);
     left: calc(50vw - 20rem);
     top: calc(50vh - 5rem);
 }
 
+.popup-window .content {
+    height: 10rem;
+    gap: 0;
+    p {
+        width: 90%;
+        padding: 1ch 0;
+    };
+    button {
+        position: relative;
+        top: -1rem;
+    }
+    
+}
+
+.popup-window .titlebar .close-btn {
+    display: none;
+}
+
 #socials .app-label, #projects .app-label {
     position: absolute !important;
-    left: 0% !important;
+    left: 15% !important;
     top: 75% !important;
 
     text-align: center;
@@ -88,10 +107,28 @@ body {
     margin: 1;    
 }
 .close-btn {
+    height: 1rem;
+    width: 1rem;
     left: 100%;
-    transform: translateX(-150%);
-    background: transparent;
+    transform: translate(-150%, 10%);
+    background: rgb(var(--red));
     border: none;
+    border-radius: 50%;
+
+    span {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        
+        color: transparent;
+        transition-duration: 0ms;
+    }
+}
+.close-btn:hover {
+    span {
+        color: rgb(var(--bg1));
+    }
 }
 
 
